tests/errors/tc_expr_member_arr.lx
@module "main"

pub const main -> fn () int {
    let arr: [int; 5] = [1, 2, 3, 4, 5];
    arr.nonexistent;
    return 0;
}
